fix: story 10 seconds to be visible

--- a/styles.css
+++ b/styles.css
@@ -1857,7 +1857,7 @@ footer {
     height: 100%;
     background: #fff;
     border-radius: 3px;
-    animation: storyProgress 6s linear forwards;
+    animation: storyProgress 10s linear forwards;
 }
 
 @keyframes storyProgress {
